# scAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  .scqc_state.json  CONTRIBUTING.md  INTEGRATION_MULTILOAD.md  KIDNEY_WORKFLOW_TEST_RESULTS.md  LICENSE  MULTILOAD_README.md  MULTILOAD_SUMMARY.md  MULTILOAD_VISUAL_GUIDE.md  Makefile  OPENAI_API_INTEGRATION.md  PLAN_VALIDATION_DESIGN.md  README.md  pyproject.toml  scQC_Agent_User_Flow.md  streamlit_app.py
.github/workflows/: ci.yml  eval.yml
eval/: prompts.yaml
kb/: README.md  batch_integration.md  doublet_detection.md  graph_analysis.md  qc_guidelines.md
kb/cell_type_markers/: human_brain.json  human_kidney.json  human_pbmc.json  kidney_markers.json  mouse_brain.json  mouse_kidney.json
kb/kb.index/: bm25.pkl  chunks.json  metadata.json
kb/workflows/: standard_qc_workflow.md
scqc_agent/: __init__.py  cli.py  graph.py  state.py
scqc_agent/agent/: __init__.py  runtime.py  schemas.py
scqc_agent/agent/prompts/: intents.yaml  plan.j2  summarize.j2
scqc_agent/agent/rag/: __init__.py  ingest.py  retriever.py
scqc_agent/eval/: __init__.py  runner.py
scqc_agent/qc/: __init__.py  priors.py
scqc_agent/quality/: __init__.py  assertions.py
scqc_agent/reports/: __init__.py  export.py
scqc_agent/tests/: __init__.py  synth.py
scqc_agent/tools/: ambient.py  annotation.py  batch_diag.py  batch_diag_scib.py  checkpoint_viz.py  differential_expression.py  doublets.py  graph.py  io.py  markers.py  multiload.py  qc.py  scar.py  scvi.py
scqc_agent/utils/: __init__.py  telemetry.py  ux.py
scripts/: e2e_smoke.sh  integrate_multiload.py
scripts/kidney_processing/: kidney_pipeline.ipynb  kidney_pipeline_backup.ipynb  raw_data_prep.ipynb
scripts/kidney_processing/lightning_logs/version_1/: history.pkl
scripts/kidney_processing/outputs/: Kidney_7_qc_report.json
tests/: E2E_TEST_IMPLEMENTATION.md  test_agent_chat.py  test_agent_graph_from_rep.py  test_ambient_rna.py  test_annotation.py  test_assertions.py  test_batch_diagnostics.py  test_checkpoint_viz.py  test_cli_state_persistence.py  test_differential_expression.py  test_doublet_json_serialization.py  test_doubletfinder.py  test_doublets.py  test_doublets_stub.py  test_e2e_agent.py  test_eval_runner.py  test_final_graph.py  test_full_kidney_pipeline.py  test_graph_from_rep.py  test_graph_quick.py  test_kb_integration.py  test_kb_retriever.py  test_marker_detection.py  test_multiload.py  test_phase8_integration.py  test_qc_filters.py  test_qc_metrics.py  test_qc_plot_progression.py  test_qc_plots.py  test_report.py  test_retriever.py  test_scar_enhancement.py  test_scar_stub.py  test_schemas.py  test_scvi_stub.py  test_state_history.py  test_stored_plan_execution.py  test_telemetry.py  test_tissue_priors.py  test_visualization_progression_simple.py
